Allowed timeout param & Removed repetition

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpagetest",
-  "version": "0.6.0",
+  "version": "0.5.1",
   "description": "WebPageTest API wrapper for NodeJS",
   "author": "WebPageTest <github@WebPageTest.com> (http://github.com/WebPageTest)",
   "homepage": "http://github.com/WebPageTest/webpagetest-api",
@@ -20,9 +20,7 @@
     "url": "http://github.com/WebPageTest/webpagetest-api/issues"
   },
   "main": "lib/webpagetest.js",
-  "bin": {
-    "webpagetest": "bin/webpagetest"
-  },
+  "bin": "bin/webpagetest",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -R spec test/*-test.js"
   },
